# project-step-3

./: .travis.yml  README.md  TestER.py  TestG.py  TestMacro.py  TestPS.py  TestWorkout.py  Untitled.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: TestER-checkpoint.py  TestG-checkpoint.py  TestPS-checkpoint.py  testsuite-checkpoint.py
test/: TestPS.py  TestWorkout.py
