{
 "cells": [
  {
   "cell_type": "code",
   "execution_count": 2,
   "id": "3ba5d20c-fb25-4a04-adfc-6a049d2119d3",
   "metadata": {},
   "outputs": [
    {
     "ename": "SyntaxError",
     "evalue": "cannot assign to expression here. Maybe you meant '==' instead of '='? (4048334737.py, line 3)",
     "output_type": "error",
     "traceback": [
      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    build-backend = \"setuptools.build_meta\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to expression here. Maybe you meant '==' instead of '='?\n"
     ]
    }
   ],
   "source": [
    "[build-system]\n",
    "requires = [\"setuptools>=61.0\"]\n",
    "build-backend = \"setuptools.build_meta\"\n",
    "\n",
    "[project]\n",
    "name = \"project-step-3\"\n",
    "version = \"0.1.0\"\n",
    "authors = [\n",
    "    { name = \"Suneet D'Silva\", email = \"example@example.com\" },\n",
    "    { name = \"Aamna Amer\", email = \"example@example.com\" }\n",
    "]\n",
    "description = \"A package for managing workouts, macros, and goals\"\n",
    "readme = \"README.md\"\n",
    "requires-python = \">=3.6\"\n",
    "classifiers = [\n",
    "    \"Programming Language :: Python :: 3\",\n",
    "    \"License :: OSI Approved :: MIT License\",\n",
    "    \"Operating System :: OS Independent\",\n",
    "]\n",
    "license = { text = \"MIT\" }\n",
    "\n",
    "[project.dependencies]\n",
    "tabulate = \"^0.9.0\"\n",
    "\n",
    "[tool.setuptools.packages.find]\n",
    "where = [\"package\"]\n",
    "\n",
    "[project.urls]\n",
    "Homepage = \"https://github.com/aamna-amer/project-step-3\""
   ]
  },
  {
   "cell_type": "code",
   "execution_count": null,
   "id": "dd7f0dd8-231b-41c1-8324-4da3443a4a6d",
   "metadata": {},
   "outputs": [],
   "source": []
  }
 ],
 "metadata": {
  "kernelspec": {
   "display_name": "Python 3 (ipykernel)",
   "language": "python",
   "name": "python3"
  },
  "language_info": {
   "codemirror_mode": {
    "name": "ipython",
    "version": 3
   },
   "file_extension": ".py",
   "mimetype": "text/x-python",
   "name": "python",
   "nbconvert_exporter": "python",
   "pygments_lexer": "ipython3",
   "version": "3.11.7"
  }
 },
 "nbformat": 4,
 "nbformat_minor": 5
}
