[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-step-3"
version = "0.1.0"
authors = [
    { name = "Suneet D'Silva", email = "suneetdsilva@gmail.com" },
    { name = "Aamna Amer", email = "aamna_a@live.com" }
]
description = "A package for managing workouts, macros, and goals"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.dependencies]
tabulate = ">=0.9.0"

[tool.setuptools.packages.find]
where = ["package"]

[project.urls]
Homepage = "https://github.com/aamna-amer/project-step-3"
